tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-call-close.ari
fn id(x: i64) -> i64 {
  return x;
}

fn broken() -> i64 {
  let value = id(1,
fn after() -> i64 {
  return 2;
}
